# cogwheel

./: .gitignore  Dockerfile  README.md  aardvarks.sh  append_httpd.conf  append_supervisord.conf  template.oauth2_metadata.json  template.shibboleth2.xml  template.ssl.conf  wsgi_settings.py  wsgi_virtual_host.conf
wsgi/: app.wsgi  pyproject.toml
wsgi/src/: auth.py  default_settings.py  main.py  models.py  register_client.py
wsgi/src/templates/: authorize.html
wsgi/wsgi-scripts/: app.wsgi
