[tool.poetry]
name = "cixiri"
version = "0.1.0"
description = ""
authors = ["vpsx <19900057+vpsx@users.noreply.github.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.1.2"
Authlib = "^0.15.2"
SQLAlchemy = "^1.3.20"
Flask-SQLAlchemy = "^2.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
